--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,4 +16,5 @@ apply from: '../build.common.gradle'
 
 dependencies {
     implementation 'org.openftc:easyopencv:1.3'
+    implementation 'org.openftc:rev-extensions-2:1.2'
 }
