--- a/build.common.gradle
+++ b/build.common.gradle
@@ -22,7 +22,7 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 28
-
+    ndkVersion "21.0.6113669"
     signingConfigs {
         debug {
             keyAlias 'androiddebugkey'
